tests/errors/compiler/dif_types_in_enum/dif_types_in_enum_class_3.c
enum class car : char
{
	a = '1',
	b,
	c = '0'
} tmp;

int main()
{
	enum car i = '1';
	return 0;
}
